--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,14 @@ dependencies:
   intl: ^0.20.2
   flutter_colorpicker: ^1.1.0
 
+  expense_repository:
+    path: packages/expense_repository
+  firebase_core: ^2.32.0
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.0
+  equatable: ^2.0.7
+  uuid: ^4.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
