--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
   fl_chart: ^0.66.0
-  intl: ^0.20.2
+  intl: ^0.19.0
   flutter_colorpicker: ^1.1.0
 
   expense_repository:
@@ -35,6 +37,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  generate: true
   assets:
     - assets/
