--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,16 @@ dependencies:
 
   expense_repository:
     path: packages/expense_repository
-  firebase_core: ^2.32.0
   bloc: ^9.0.0
   flutter_bloc: ^9.1.0
   equatable: ^2.0.7
   uuid: ^4.5.1
   provider: ^6.1.2
   shared_preferences: ^2.5.2 # đang lỗi th này
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
 
 dev_dependencies:
   flutter_test:
