--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,14 +37,17 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.bloc_expenses_tracker"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = 35
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -55,7 +58,9 @@ android {
         }
     }
 }
-
+dependencies {
+    implementation 'androidx.multidex:multidex:2.0.1'
+}
 flutter {
     source = "../.."
 }
