--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+// ✅ Thêm đoạn này vào đầu file
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.3.0' // phiên bản phù hợp với Flutter
+        classpath 'com.google.gms:google-services:4.3.15' // ✅ Bắt buộc để dùng Firebase
+    }
+}
+
 allprojects {
     repositories {
         google()
