--- a/.github/workflows/android_ci_cd.yml
+++ b/.github/workflows/android_ci_cd.yml
@@ -36,8 +36,8 @@ jobs:
         run: flutter pub get
 
       # Bước 5: Kiểm tra định dạng mã
-      - name: Check formatting
-        run: dart format --set-exit-if-changed .
+      # - name: Check formatting
+      #   run: dart format --set-exit-if-changed .
 
       # Bước 6: Phân tích mã (linter)
       - name: Analyze code
