--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,7 @@ analyzer:
     - lib/generated/**
   errors:
     unused_import: ignore # Đặt mức độ thành warning, không phải error
+    unnecessary_import: ignore
     deprecated_member_use: ignore
     avoid_print: ignore # Bỏ qua cảnh báo về print
     use_build_context_synchronously: ignore
