--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -61,6 +61,12 @@
                     android:scheme="https"
                     android:host="expense-tracker-f255c.firebaseapp.com" />
             </intent-filter>
+
+            <!-- 👇 Thêm intent-filter cho FLUTTER_NOTIFICATION_CLICK -->
+            <intent-filter>
+                <action android:name="FLUTTER_NOTIFICATION_CLICK" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
